@@ -1,3 +1,8 @@
+2011-01-08  Leonardo Martins  <leonardo@cose.fee.unicamp.br>
+
+	* @problema/private/construir_{lb,ub}.m:
+	(obj.ls, obj.us): Eliminação das variáveis de volume de usinas fio-d'água.
+
 2011-01-07  Leonardo Martins  <leonardo@cose.fee.unicamp.br>
 
 	* @io/private/ropt_.m: 
